# main42gsever

./: .gitignore  .gitmodules  Makefile  README.md
3libfttest-github/: .gitignore
libft-ben-sen0biz/: main.c  (+7 more)
projes/main/5push_swap/5push_swap_all_git_samples/push_swap_git_pde_bakk/: CMakeLists.txt  Makefile
projes/main/5push_swap/5push_swap_all_git_samples/push_swap_git_pde_bakk/ft_printf/src/: ft_floats3.c  ft_printf.c  ft_shortshortfinders.c
projes/main/5push_swap/5push_swap_all_git_samples/push_swap_git_pde_bakk/include/: utils.h
projes/main/5push_swap/5push_swap_all_git_samples/push_swap_git_pde_bakk/libc_vector/srcs/: vector_sort.c
projes/main/5push_swap/5push_swap_all_git_samples/push_swap_git_pde_bakk/log_error/five/: test_10  test_11  test_14  test_18  test_20  test_31  test_32  test_38  test_42  test_43  test_47  test_51  test_52  test_53  test_6  test_60  test_61  test_64  test_72  test_79  test_8  test_81  test_83  test_85  test_89
projes/main/5push_swap/5push_swap_all_git_samples/push_swap_git_pde_bakk/src/chunk/: chunk.c  chunk_size.c
projes/main/5push_swap/5push_swap_all_git_samples/push_swap_git_pde_bakk/src/operations/: reverse_rotate.c
projes/main/5push_swap/5push_swap_all_git_samples/push_swap_git_pde_bakk/src/solver/: solving_utils.c
projes/main/5push_swap_all_git_samples/push_swap_git_pde_bakk/libc_vector/: CMakeLists.txt  Makefile
projes/main/5push_swap_all_git_samples/push_swap_git_pde_bakk/libc_vector/.github/workflows/: macos-build.yml
projes/main/5push_swap_all_git_samples/push_swap_git_pde_bakk/libc_vector/srcs/: utils.c
(+2183 files in other folders)
